<resources>
    <string name="app_name">Football Leagues</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="website">Website</string>
    <string name="nestEvents">Próximos 5 encuentros:</string>
    <string name="official_jersey">Camiseta oficial:</string>
    <string name="description">Descripción:</string>
    <string name="foundation_year">Año de fundación:</string>

    <string-array name="leagues">
        <item>Liga Española</item>
        <item>Bundesliga</item>
        <item>Liga de Inglaterra</item>
    </string-array>

</resources>